overriding default fullpage.js settings

--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
 
 <body>
 
+    <!--Header for all pages w/ links-->
     <header>
         <ul class="nav">
             <li class="nav-item">Nick Bell</li>
             <li class="nav-item-icon"><a href="./resume/Nick-Bell-Resume.pdf" download><img src="../images/cv.png"
                         alt="GitHub"></a></li>
-            <li class="nav-item-icon"><a href="https://www.linkedin.com/in/nick-bell32/"><img
-                        src="../images/linkedin.png" alt="LinkedIn"></a></li>
             <li class="nav-item-icon"><a href="https://github.com/ntbell"><img src="../images/github.png"
                         alt="GitHub"></a></li>
+            <li class="nav-item-icon"><a href="https://www.linkedin.com/in/nick-bell32/"><img
+                        src="../images/linkedin.png" alt="LinkedIn"></a></li>
         </ul>
     </header>
 
+    <!--This tag is required by fullpage.js-->
     <div id="fullPage">
 
+        <!--Page 1: Home-->
         <div class="section active" id="section1">
             <div class="bg-image"></div>
             <div class="s1">
@@ -38,6 +41,7 @@
             </div>
         </div>
 
+        <!--Page 2: About-->
         <div class="section" id="section2">
             <div class="s2">
                 <div class="s2-left">
@@ -51,6 +55,7 @@
             </div>
         </div>
 
+        <!--Page 3: Projects-->
         <div class="section" id="section3">
             <div class="slide active">
                 <div class="s3">
@@ -109,6 +114,7 @@
             </div>
         </div>
 
+        <!--Page 4: Contact-->
         <div class="section" id="section4">
             <div class="s4">
                 <h1 class="s4-item-lg">I am currently open to new opportunities!</h1>
@@ -121,9 +127,7 @@
         </div>
     </div>
 
-
-
-
+    <!--fullpage.js scripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
         integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
